# charmcraft

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .trivyignore.yaml  .yamllint.yaml  .yamllintignore  Akmint؟  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOWTO_RELEASE.md  HOWTO_SNAP.md  MANIFEST.in  Makefile  README.md  SECURITY.md  charmcraft.spec  common.mk  completion.bash  craft-providers-bug-report.md  osv-scanner.toml  pyproject.toml  requirements-bionic.txt  requirements-build-constraints.txt  requirements-dev.txt  requirements-focal.txt  requirements-jammy.txt  requirements-noble.txt  requirements.txt  run_tests  setup.cfg  setup.py  spread.yaml  tox.ini
.github/: .copilot-collections.yaml  .jira_sync_config.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate-config.js  renovate.json  renovate.json5
charm/: __main__.py  cmdbase.py  logsetup.py  main.py
charmcraft/: __init__.py  __main__.py  _version.py  bases.py  charm_builder.py  cmdbase.py  config.py  const.py  declarative_plugin.py  deprecations.py  dispatch.py  env.py  errors.py  format.py  help.py  helptexts.py  instrum.py  jujuignore.py  linters.py  logsetup.py  main.py  manifest.py  metadata.py  mt.py  package.py  parts.py  poc_messages_lib.py  preprocess.py  (+6 more)
tests/spread/dependencies/setuptools-scm-python/: charmcraft-charm.yaml  charmcraft-poetry.yaml  charmcraft-python.yaml  charmcraft-uv.yaml  constraints.txt  pyproject.toml  requirements.txt  task.yaml
tests/spread/dependencies/setuptools-scm-python/src/: charm.py
(+1208 files in other folders)
