[project]
name = "setuptools-scm-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opentelemetry-api",
]

[tool.poetry]
name = "setuptools-scm-python"
version = "0.1.0"
authors = []
description = "Add your description here"

packages = [
    { include = "setuptools-scm-python"},
]

[tool.uv]
build-constraint-dependencies = [
    # Only one of the next three lines needs to be uncommented for it to work.
    "setuptools_scm < 8.3.0; python_version < '3.10'",
    # "importlib-metadata < 8.2.0; python_version < '3.10'",
    # "zipp < 3.20; python_version < '3.10'",
]

[tool.uv.workspace]
members = ["."]
